# Chess

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  ChessPieces.cpp  ChessPieces.h  Empty.cpp  Empty.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  main.cpp
Chess 2.0/: Board.cpp  Board.h  CMakeLists.txt  ChessPieces.cpp  ChessPieces.h  Empty.cpp  Empty.h  Game.cpp  Game.h  main.cpp
